1.0.4
	You can now tap the hold box to hold your current Tetrimino.
		You are able to turn this feature off in the settings.
	Dragging up now cancels soft dropping.
	Jetris now follows the Super Rotation System exactly!
	Jetris now implements Infinity exactly!
	Jetris now has the 3-corner T t-spin system.
		You can choose between this system and the original (Immobile) system in the settings.
	"T-spin" have been renamed to "Twist" to account for spins that are not with the T-Tetrimino in Immobile mode.
	Highscores now updates during the game.
		While displayed it doesn't fully save until the game is reset or paused.
	Restructured the game sequence to better display a loss.
	"Time's Up" message changed to "Finish".
	Improved performance for timer in time attack.
	Improved performance for displaying the grid.
	Improved performance when a Tetrimino is on delay.
	Improved performance for updating the locations of the active Tetrimino.
	Improved performance for loading the game.
	Default "Default Gravity" has been adjusted to 0.033. 
		You may want to change this setting manually (or press reset all settings).
	Fixed bug: Some settings are able to be changed such that it exceeds the cap.
	Fixed bug: Low timing resolution causing Tetriminos to fall erratically.
	Fixed bug: First block falling faster than normal on new game. 
1.0.3
	Changed losing condition to better match Tetris guidelines
	Fixed active shape not falling correctly right after picking
	Changed board layout
	Fixed yet another pause text bug
	Fixed AboutActivity Title
1.0.2
	Added Reset Highscore Option
	Changed information Display
	Redid settings for integers
	Settings menu now instantly updates once reset
	Consolidated settings updating
	Rebuilt settings menu
1.0.1b
	Fixed Load Game when there is no game available
	Fixed about page displaying settings menu
	Fixed instructions page not displaying correct theme
1.0.1a
	Added Super Dark background option for the dark theme
	Added reset settings button