@@ -61,4 +61,12 @@
         android:onClick="openAbout"
         android:text="@string/about" />
 
+    <TextView
+        android:id="@+id/updateInfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:text="@string/update_text" />
+
 </RelativeLayout>
